--- a/index.html
+++ b/index.html
@@ -1,52 +1,12 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <script src="main.js">
-  </script>
-</head>
+<!doctype html>
+<meta charset="utf-8" />
+<title>DM6 Elm</title>
 <body>
-<script>
-const key = 'dm6-elm'
-const modelStr = localStorage.getItem(key)
-const model = modelStr ? JSON.parse(modelStr) : null
-const app = Elm.Main.init({
-  flags: model
-})
-app.ports.store.subscribe(model => {
-  localStorage.setItem(key, JSON.stringify(model))
-})
-app.ports.importJSON.subscribe(() => {
-  const id = 'dm6-elm-importer'
-  const input = document.getElementById(id) || document.createElement('input')
-  if (!input.id) {
-    input.id = id
-    input.type = 'file'
-    input.style.display = 'none'
-    input.addEventListener('change', async () => {
-      localStorage.setItem(key, await input.files[0].text())
-      location.reload()
-    })
-    document.body.appendChild(input)
-  }
-  input.click()
-})
-app.ports.exportJSON.subscribe(() => {
-  const id = 'dm6-elm-exporter'
-  const modelStr = localStorage.getItem(key)
-  const anchor = document.getElementById(id) || document.createElement('a')
-  const file = new File([modelStr], 'not-used')
-  const url = URL.createObjectURL(file)
-  if (!anchor.id) {
-    anchor.id = id
-    anchor.download = 'dm6-elm-export.json'
-    anchor.style.display = 'none'
-    document.body.appendChild(anchor)
-  }
-  anchor.setAttribute('href', url)
-  anchor.click()
-  URL.revokeObjectURL(url)
-})
-</script>
+  <!-- build script replaces this tag with inlined JS -->
+  <script src="main.js"></script>
+
+  <script>
+    // If you want the injected dev-tools block to hook ports via window.app, keep this assignment:
+    window.app = Elm.AppMain.init({ flags: {} });
+  </script>
 </body>
-</html>
