--- a/index.html
+++ b/index.html
@@ -1,27 +1,12 @@
-<!DOCTYPE HTML>
-<html>
-
-<head>
-  <meta charset="UTF-8">
-  <script src="main.js">
-  </script>
-</head>
-
+<!doctype html>
+<meta charset="utf-8" />
+<title>DM6 Elm</title>
 <body>
+  <!-- build script replaces this tag with inlined JS -->
+  <script src="main.js"></script>
+
   <script>
-    const storedData = localStorage.getItem('dm6-elm')
-    const model = storedData ? JSON.parse(storedData) : null
-
-    /* make app global so injected prod script can see it */
-    window.app = Elm.Main.init({ flags: model })
-
-    app.ports.store?.subscribe(function (model) {
-      localStorage.setItem('dm6-elm', JSON.stringify(model))
-    })
-
-    /* no log port subscription here — dev remains clean */
+    // If you want the injected dev-tools block to hook ports via window.app, keep this assignment:
+    window.app = Elm.AppMain.init({ flags: {} });
   </script>
-
 </body>
-
-</html>
