--- a/public/cold-boot.html
+++ b/public/cold-boot.html
@@ -7,13 +7,23 @@
   html,body{ height:100% }
   body{ margin:0; font:14px/1.35 system-ui,-apple-system,Segoe UI,Roboto,sans-serif; }
   details{ border-bottom:1px solid var(--line) }
-  summary{ list-style:none; cursor:pointer; padding:8px var(--pad); display:flex; gap:8px; align-items:center }
+  summary{ display:flex; gap:8px; align-items:center; padding:8px var(--pad); }
   summary::-webkit-details-marker{ display:none }
   .spacer{ flex:1 }
   .muted{ color:var(--muted); font-size:12px }
   .btn{ padding:4px 8px; border:1px solid var(--ring); border-radius:6px; background:#fafafa; cursor:pointer }
   .btn:hover{ background:#f0f0f0 }
-  #elmMount{ min-height:140px; height:40vh; resize:vertical; overflow:auto; padding:0; }
+
+  #elmMount{
+    position: relative;   /* <-- contain absolute children to this box */
+    min-height:140px;
+    height:40vh;
+    resize:vertical;
+    overflow:auto;        /* optional; keep Elm inside */
+    padding:0;
+  }
+  #elmMount > div{ position:relative; height:100%; }
+
   #jqbar{ display:flex; gap:8px; align-items:center; padding:8px var(--pad) }
   #jq{ flex:1; border:1px solid var(--ring); height:2.1rem; padding:.35rem .55rem; font:13px/1.35 var(--mono) }
   #result{ max-height:28vh; overflow:auto; padding:0 var(--pad) var(--pad) var(--pad) }
@@ -24,15 +34,19 @@
   }
 </style>
 
-<div id="toolbar">
-  <button id="bootPage">Boot JSON</button>
-  <button id="bootEmpty">Cold {}</button>
-  <span class="spacer"></span>
-  <span id="status" class="muted">waiting…</span>
-</div>
-
-<div id="app"></div>
-
+<!-- Elm pane -->
+<details id="elmPane" open>
+  <summary>
+    <strong>Elm</strong>
+    <span class="toolbar">
+      <button id="bootPage"  class="btn">Boot JSON</button>
+      <button id="bootEmpty" class="btn">Cold {}</button>
+      <span class="spacer"></span>
+      <span id="status" class="muted">waiting…</span>
+    </span>
+  </summary>
+  <div id="elmMount"></div>
+</details>
 
 <!-- jq pane -->
 <details id="jqPane" open>
@@ -59,7 +73,7 @@
   import {Inspector} from 'https://cdn.jsdelivr.net/npm/@observablehq/inspector@5.0.1/+esm'
 
   // ---------- Elements ----------
-  const $mount  = document.getElementById('app')
+  const $mount  = document.getElementById('elmMount')
   const $status = document.getElementById('status')
   const $jq     = document.getElementById('jq')
   const $run    = document.getElementById('run')
@@ -83,7 +97,9 @@
       return null
     }
     const mount = document.createElement('div')
-    mount.style.height = '100%'
+    mount.style.position = 'relative'
+    mount.style.height   = '100%'   // 100% of #elmMount’s 40vh
+    mount.style.width    = '100%'
     $mount.replaceChildren(mount)
     const app = App.init({ node: mount, flags })
     const name = (App === window.Elm.AppEmbed ? 'AppEmbed' : App === window.Elm.AppMain ? 'AppMain' : 'Main')
