--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,41 @@
 <!doctype html>
-<meta charset="utf-8" />
-<title>DM6 Elm</title>
-<body>
-  <script src="main.js"></script>
-  <script>
-    // AppMain is tolerant to any flags
-    Elm.AppMain.init({ flags: {} });
-  </script>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>DM6 Elm</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- silence 404 favicon -->
+    <link rel="icon" href="data:,">
+    <style>
+      html, body { height: 100%; margin: 0; }
+      body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+             user-select: none; -webkit-user-select: none; }
+    </style>
+  </head>
+  <body>
+    <noscript>This app requires JavaScript.</noscript>
+
+    <!-- 1) load bundle -->
+    <script src="main.js"></script>
+
+    <!-- 2) init AFTER window 'load' (guaranteed: Elm is defined) -->
+    <script>
+      (function () {
+        function init() {
+          if (!window.Elm || !Elm.Main) {
+            console.error('Elm bundle not loaded. window.Elm =', window.Elm);
+            return;
+          }
+          var flags = null;
+          try {
+            var raw = localStorage.getItem('dm6-elm');
+            flags = raw ? JSON.parse(raw) : null;
+          } catch (_) {}
+          window._dm6 = Elm.Main.init({ flags: flags });
+        }
+        if (document.readyState === 'complete') init();
+        else window.addEventListener('load', init);
+      })();
+    </script>
+  </body>
+</html>
