build(prod): switch to public/index.html, robust logger swap, dual-boot init
* Use public/index.html as template; keep `<script src="main.js">` for inlining
* Add git-based cleanup (git restore) with fallback to Dev logger + header normalize
* Swap Prod logger into src/Logger.elm for build; rewrite only module name to `Logger` preserving exposing list
* Keep back-compat `log` alias addition
* Rename logger files to folder layout:
  * src/Logger/DevLogger.elm → src/Logger/Dev/Logger.elm (`module Dev.Logger`)
  * src/Logger/ProdLogger.elm → src/Logger/Prod/Logger.elm (`module Prod.Logger`)
* Update public/index.html init to dual-boot `Elm.AppMain` (prod) or `Elm.Main` (dev) and assign `window.app` (+ `_dm6` alias)
* Inject safe logger port subscription in generated HTML

--- a/public/index.html
+++ b/public/index.html
@@ -18,21 +18,36 @@
     <!-- 1) load bundle -->
     <script src="main.js"></script>
 
-    <!-- 2) init AFTER window 'load' (guaranteed: Elm is defined) -->
+    <!-- 2) init AFTER window 'load' -->
     <script>
       (function () {
         function init() {
-          if (!window.Elm || !Elm.Main) {
+          if (!window.Elm) {
             console.error('Elm bundle not loaded. window.Elm =', window.Elm);
             return;
           }
+          var Boot = (Elm.AppMain || Elm.Main);
+          if (!Boot) {
+            console.error('No Elm root found. Keys:', Object.keys(Elm));
+            return;
+          }
+
           var flags = null;
           try {
             var raw = localStorage.getItem('dm6-elm');
             flags = raw ? JSON.parse(raw) : null;
           } catch (_) {}
-          window._dm6 = Elm.Main.init({ flags: flags });
+
+          try {
+            window.app = Boot.init({ flags: flags });
+          } catch (e) {
+            try { window.app = Boot.init(); }
+            catch (e2) { console.error('Failed to init Elm app', e2); }
+          }
+          // optional legacy alias
+          window._dm6 = window.app;
         }
+
         if (document.readyState === 'complete') init();
         else window.addEventListener('load', init);
       })();
